# Saucedemo

./: .gitignore  README.md  conftest.py  conftest_new.py  conftest_old.py  pyproject.toml  pytest.ini  report.html  report_1129.html  test_TC_001_00_01.py  test_TC_001_00_05.py  test_TC_001_00_07.py  test_TC_001_00_08.py  test_TC_002_01_02.py  test_TC_002_06_01.py  test_TC_002_07_01.py  test_TC_003_03_01.py  test_TC_004_00_01.py  test_TC_004_02_01.py  test_TC_004_04_01.py  test_TC_004_06_01.py  test_TC_005_00_01.py  test_TC_005_00_02.py  test_TC_005_00_03.py  test_TC_005_01_01.py  test_TC_005_03_01.py  test_TC_006_02_00.py  test_TC_006_02_03.py
pages/: base_page.py  cart_page.py  checkout_page.py  const.py  inventory_page.py  locators.py  login_page.py
tests/: test_TC_001_00_01.py  test_TC_001_00_04.py  test_TC_001_00_05.py  test_TC_001_00_06.py  test_TC_001_00_07.py  test_TC_001_00_08.py  test_TC_001_invalid_credentials.py  test_TC_001_valid_usernames.py  test_TC_002_01_02.py  test_TC_002_01_all_users.py  test_TC_002_02_00_All_users.py  test_TC_002_02_01.py  test_TC_002_02_02.py  test_TC_002_02_03.py  test_TC_002_03_01.py  test_TC_002_06_01.py  test_TC_002_07_01.py  test_TC_003_004_01.py  test_TC_003_03_01.py  test_TC_003_04_01.py  test_TC_004_00_01.py  test_TC_004_00_all_users.py  test_TC_004_01_01.py  test_TC_004_01_all_users.py  test_TC_004_02_01.py  test_TC_004_03_all_users.py  test_TC_004_04_01.py  test_TC_004_06_01.py  test_TC_004_07_01.py  test_TC_005_00_01.py  test_TC_005_00_02.py  test_TC_005_00_03.py  test_TC_005_00_all_users.py  test_TC_005_01_01.py  (+19 more)
(+2 files in other folders)
