[tool.poetry]
name = "pyletsdoit-team"
version = "0.1.0"
description = ""
authors = ["Elena Vorobyeva <elvorob@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"
black = "^22.10.0"
flake8 = "^5.0.4"
pytest = "^7.2.0"
webdriver-manager = "^3.8.4"
common = "^0.1.2"
selectors = "^0.0.14"
pytest-xdist = "^3.0.2"
pytest-html = "^3.2.0"
pytest-order = "^1.0.1"
